--- a/views/admin/customers.ejs
+++ b/views/admin/customers.ejs
@@ -20,7 +20,7 @@
 
     <div class="right mt-5">
         <table class="table table-striped">
-            <thead>
+            <thead class="table-header-bg">
                 <tr>
                     <th scope="col"><b>Name</b></th>
                     <th scope="col"><b>Email</b></th>
