--- a/views/admin/editCategory.ejs
+++ b/views/admin/editCategory.ejs
@@ -8,20 +8,20 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6 mt-60">
-          
+            <h2 class="mb-4 text-center">Edit Category</h2>
             <form method="post" action="/admin/editCategory/<%= category._id %>">
                 <div class="mb-4 mt-30">
-                    <label for="category_name" class="form-label">Name</label>
+                    <label for="category_name" class="form-label fw-bold">Name</label>
                     <input type="text" name="categoryName" id="category_name" class="form-control border" 
                            value="<%= category.name %>" required />
                 </div>
 
                 <div class="mb-4">
-                    <label for="description" class="form-label">Description</label>
+                    <label for="description" class="form-label fw-bold">Description</label>
                     <textarea name="description" id="description" class="form-control border" required><%= category.description %></textarea>
                 </div>
                 <div class="mb-4">
-                    <label for="status" class="form-label">Status</label>
+                    <label for="status" class="form-label fw-bold">Status</label>
                     <select name="status" id="status" class="form-select border" required>
                         <option value="Listed" <%= category.status === "Listed" ? "selected" : "" %>>Listed</option>
                         <option value="Unlisted" <%= category.status === "Unlisted" ? "selected" : "" %>>Unlisted</option>
@@ -30,12 +30,24 @@
                 </div>
                 
 
-                <div class="d-grid text-end mt-30 col-md-5">
-                    <button class="btn btn-primary" type="submit">Update Category</button>
+                <div class="d-flex justify-content-end gap-2 mt-30">
+                    <button class="btn btn-primary w-50" type="submit">Update Category</button>
+                    <button class="btn btn-secondary w-50" type="button" onclick="window.location.href='/admin/category'">Cancel</button>
                 </div>
+                
             </form>
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
 
 <%- include("../../views/partials/admin/footer") %>  
