--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -172,3 +172,9 @@ h1 {
         margin-top: 10px; /* Add spacing above the button */
     }
 }
+.checkout-note {
+    font-size: 12px;
+    color: #555;
+    margin-top: 5px;
+    margin-left: 500px;
+}
