--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -67,8 +67,8 @@
                     </a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin/brands">
-                        <i class="icon material-icons md-stars"></i> Brands
+                    <a class="menu-link" href="/admin/coupons">
+                        <i class="icon material-icons md-stars"></i> Coupon Management
                     </a>
                 </li>
                 <li class="menu-item">
